--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
             
             <!-- Column 1: Image -->
             <div class="md:col-span-1 lg:col-span-1 flex justify-center md:justify-start">
-                <img src="https://media.licdn.com/dms/image/v2/D4D03AQElIgWslkyJbQ/profile-displayphoto-crop_800_800/B4DZnjmUPPJUAI-/0/1760460097204?e=1762387200&v=beta&t=6uAmkOse4HhoJ_JdpKGjYH8zFs41PQVP8i8ci2_WK8o" 
+                <img src="https://raw.githubusercontent.com/codesapienbe/me/refs/heads/main/profile.jpeg" 
                      alt="Yilmaz Mustafa Profile Photo" 
                      class="w-32 h-32 rounded-full object-cover border-4 border-[#0A9396] shadow-md"/>
             </div>
