Update professional experience in index.html: Extend freelance software engineering period to August 2025, shift focus from Python to Java and AI/ML with Spring integration, and enhance project descriptions. Add new RabbitMQ Bridge project showcasing messaging integrations with Spring Boot.

--- a/index.html
+++ b/index.html
@@ -248,16 +248,16 @@
                     <div class="absolute -left-1.5 mt-1.5 w-3 h-3 bg-[#005F73] rounded-full"></div>
                     <div class="md:grid md:grid-cols-2 md:gap-8">
                         <div class="md:text-right md:pr-8">
-                            <time class="block mb-1 text-sm font-normal leading-none text-slate-500">Feb 2025 – May 2025 (4 mos)</time>
+                            <time class="block mb-1 text-sm font-normal leading-none text-slate-500">Feb 2025 – Aug 2025 (7 mos)</time>
                             <h3 class="text-xl font-semibold text-[#005F73]">Software Engineer</h3>
-                            <span class="text-sm font-medium text-[#0A9396]">(Freelance - Python AI Focus)</span>
+                            <span class="text-sm font-medium text-[#0A9396]">(Freelance - Java & AI/ML, Spring AI integration)</span>
                         </div>
                         <div class="p-4 bg-white rounded-lg border border-slate-200 shadow-sm mt-2 md:mt-0">
                             <ul class="list-disc ml-4 text-base font-normal text-slate-600 space-y-1">
-                                <li>Developed <strong>Python AI Applications</strong> using <strong>OpenCV</strong> and <strong>TensorFlow</strong> for computer vision systems, integrating them via <strong>FastAPI</strong> backends.</li>
-                                <li>Implemented cross-platform mobile applications using <strong>React Native</strong> with embedded AI capabilities (<strong>TensorFlow Lite</strong>).</li>
+                                <li>Built production Java microservices with <strong>Spring Boot</strong> and integrated AI model serving using <strong>Spring AI</strong> for low-latency inference pipelines.</li>
+                                <li>Designed end-to-end AI/ML workflows combining Java (Spring) services with Python model components (<strong>TensorFlow</strong>/<strong>PyTorch</strong>), exposing inference APIs and batch pipelines.</li>
                             </ul>
-                            <p class="text-xs text-slate-500 mt-2">Skills: Python, Computer Vision, FastAPI, React Native, TensorFlow, NestJS, Software Design.</p>
+                            <p class="text-xs text-slate-500 mt-2">Skills: Java, Spring Boot, Spring AI, DJL (Deep Learning for Java), TensorFlow, Python, FastAPI, Microservices, Model Serving.</p>
                         </div>
                     </div>
                 </div>
@@ -480,6 +480,18 @@
                     <h4 class="text-lg font-semibold text-[#005F73]">DeepVoice - Voice Analysis Library 🎤</h4>
                     <p class="text-sm font-medium text-[#0A9396] mb-2">Technologies: Python, AI/ML, Signal Processing | <a href="https://github.com/codesapienbe/DeepVoice" target="_blank" class="github-link">GitHub Link</a></p>
                     <p class="text-slate-600 text-sm">A comprehensive <strong>Python library</strong> for voice analysis, processing, and <strong>speaker identification</strong>, reinforcing active interest and competency in the AI/ML domain.</p>
+                </div>
+                
+                <div class="bg-white rounded-xl shadow-lg p-6 project-card-border project-card-border-info">
+                    <h4 class="text-lg font-semibold text-[#005F73]">Spring ZeroMQ Starter 🧩🐙</h4>
+                    <p class="text-sm font-medium text-[#0A9396] mb-2">Technologies: Java, Spring Boot, JeroMQ (ZeroMQ) | <a href="https://github.com/codesapienbe/spring-zeromq-starter" target="_blank" class="github-link">GitHub Link</a></p>
+                    <p class="text-slate-600 text-sm">A Spring Boot starter that provides a zero-dependency messaging layer on <strong>ZeroMQ (JeroMQ)</strong> with end-to-end <strong>CURVE</strong> encryption, annotation-driven APIs, auto-configuration, vector messaging and GPU/CPU compute integrations.</p>
+                </div>
+
+                <div class="bg-white rounded-xl shadow-lg p-6 project-card-border project-card-border-emerald">
+                    <h4 class="text-lg font-semibold text-[#005F73]">Spring Finqube ⚖️🏦</h4>
+                    <p class="text-sm font-medium text-[#0A9396] mb-2">Technologies: Java, Spring Boot, ISO 20022 | <a href="https://github.com/codesapienbe/spring-finqube" target="_blank" class="github-link">GitHub Link</a></p>
+                    <p class="text-slate-600 text-sm">Production-ready Spring starter for ISO 20022 financial messaging with enterprise security, PKI/HSM hooks, monitoring, and transport adapters for SWIFT/AMH.</p>
                 </div>
             </div>
         </section>
@@ -1503,7 +1515,7 @@
 
         const professionalExperienceHTML = [
             // EXPERIENCE 1
-            { period: 'Feb 2025 – May 2025 (4 mos)', title: 'Software Engineer', subtitle: 'Freelance - Python AI Focus', bullets: ['Developed <strong>Python AI Applications</strong> using <strong>OpenCV</strong> and <strong>TensorFlow</strong> for computer vision systems, integrating them via <strong>FastAPI</strong> backends.', 'Implemented cross-platform mobile applications using <strong>React Native</strong> with embedded AI capabilities (<strong>TensorFlow Lite</strong>).'] },
+            { period: 'Feb 2025 – Aug 2025 (7 mos)', title: 'Software Engineer', subtitle: 'Freelance - Java & AI/ML, Spring AI integration', bullets: ['Built production Java microservices with <strong>Spring Boot</strong> and integrated AI model serving using <strong>Spring AI</strong> for low-latency inference pipelines.', 'Designed end-to-end AI/ML workflows combining Java (Spring) services with Python model components (<strong>TensorFlow</strong>/<strong>PyTorch</strong>), exposing inference APIs and batch pipelines.'] },
             // EXPERIENCE 2
             { period: 'Oct 2024 – Feb 2025 (5 mos)', title: 'Java Software Engineer', subtitle: 'theMatchBox, Antwerp', bullets: ['Developed custom <strong>ElasticSearch Java Plugins</strong> for advanced search algorithms and performed JVM tuning/Spring application performance enhancement, utilizing <strong>ZeroMQ</strong>.'] },
             // EXPERIENCE 3
@@ -1540,7 +1552,9 @@
             { title: 'Spring Vision Framework 👁️', desc: 'A production-ready computer vision framework delivered as a <strong>Spring Boot Starter</strong>, enabling zero-configuration object detection, face analysis, and intelligent applications with enterprise security and high-performance pluggable backends.', link: 'https://github.com/codesapienbe/spring-vision' },
             { title: 'Instyper - Voice-to-Text Desktop App 🎙️', desc: 'A lightweight, privacy-first desktop application that turns your voice into text instantly. It works offline (Vosk) and supports modern online models (Whisper) and live translation.', link: 'https://github.com/codesapienbe/Instyper' },
             { title: 'Stegnocchi - EXIF Steganography App 🖼️', desc: 'A security tool built in <strong>Core Java</strong> focused on hiding data within image metadata (<strong>EXIF Steganography</strong>), showcasing low-level data manipulation and security principles.', link: 'https://github.com/codesapienbe/Stegnocchi' },
-            { title: 'DeepVoice - Voice Analysis Library 🎤', desc: 'A comprehensive <strong>Python library</strong> for voice analysis, processing, and <strong>speaker identification</strong>, reinforcing active interest and competency in the AI/ML domain.', link: 'https://github.com/codesapienbe/DeepVoice' }
+            { title: 'DeepVoice - Voice Analysis Library 🎤', desc: 'A comprehensive <strong>Python library</strong> for voice analysis, processing, and <strong>speaker identification</strong>, reinforcing active interest and competency in the AI/ML domain.', link: 'https://github.com/codesapienbe/DeepVoice' },
+            { title: 'Spring ZeroMQ Starter 🧩🐙', desc: 'Spring Boot starter providing a zero-dependency messaging layer on ZeroMQ (JeroMQ) with CURVE encryption, annotation APIs and GPU/CPU compute support.', link: 'https://github.com/codesapienbe/spring-zeromq-starter' },
+            { title: 'Spring Finqube ⚖️🏦', desc: 'Production-ready Spring starter for ISO 20022 financial messaging with PKI/HSM integration, monitoring and transport adapters.', link: 'https://github.com/codesapienbe/spring-finqube' }
         ].map(p => `
             <div class="proj-block">
                 <p class="proj-title">${p.title}</p>
